WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178213
[Win64] JSC compile error.
https://bugs.webkit.org/show_bug.cgi?id=178213
Summary
[Win64] JSC compile error.
Per Arne Vollan
Reported
2017-10-12 08:53:22 PDT
WebKit\Source\JavaScriptCore\dfg/DFGOSRExit.cpp(672): warning C4245: '=': conversion from '__int64' to 'uintptr_t', signed/unsigned mismatch
Attachments
Patch
(1.36 KB, patch)
2017-10-12 08:57 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-10-12 08:57:17 PDT
Created
attachment 323528
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2017-10-12 08:59:04 PDT
<
rdar://problem/34956170
>
Per Arne Vollan
Comment 3
2017-10-12 11:56:12 PDT
Thanks for reviewing!
WebKit Commit Bot
Comment 4
2017-10-12 12:24:05 PDT
Comment on
attachment 323528
[details]
Patch Clearing flags on attachment: 323528 Committed
r223248
: <
https://trac.webkit.org/changeset/223248
>
WebKit Commit Bot
Comment 5
2017-10-12 12:24:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug