[Win64] JSC compile error. https://bugs.webkit.org/show_bug.cgi?id=178213

Reviewed by Alex Christensen.

Add static cast from int64 to uintptr_t.

* dfg/DFGOSRExit.cpp:
(JSC::DFG::OSRExit::executeOSRExit):


Canonical link: https://commits.webkit.org/194470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223248 268f45cc-cd09-0410-ab3c-d52691b4dbfc